@@ -2917,7 +2917,8 @@ packRegisters (eBBlock ** ebpp, int blockno)
 	 this is the only usage then
          mark the itemp as a conditional */
       if ((IS_CONDITIONAL (ic) ||
-	   (IS_BITWISE_OP(ic) && isBitwiseOptimizable (ic))) &&
+	   (IS_BITWISE_OP(ic) && isBitwiseOptimizable (ic)) ||
+           (POINTER_GET (ic) && getSize (operandType (IC_RESULT (ic))) <=1)) &&
 	  ic->next && ic->next->op == IFX &&
 	  bitVectnBitsOn (OP_USES(IC_RESULT(ic)))==1 &&
 	  isOperandEqual (IC_RESULT (ic), IC_COND (ic->next)) &&
@@ -2926,6 +2927,20 @@ packRegisters (eBBlock ** ebpp, int blockno)
 	  OP_SYMBOL (IC_RESULT (ic))->regType = REG_CND;
 	  continue;
 	}
+      
+      /* if the condition of an if instruction
+         is defined in the previous GET_POINTER instruction and
+	 this is the only usage then
+         mark the itemp as accumulator use */
+      if ((POINTER_GET (ic) && getSize (operandType (IC_RESULT (ic))) <=1) &&
+          ic->next && ic->next->op == IFX &&
+          bitVectnBitsOn (OP_USES(IC_RESULT(ic)))==1 &&
+          isOperandEqual (IC_RESULT (ic), IC_COND (ic->next)) &&
+          OP_SYMBOL (IC_RESULT (ic))->liveTo <= ic->next->seq)
+        {
+          OP_SYMBOL (IC_RESULT (ic))->accuse = 1;
+          continue;
+        }
 
       /* reduce for support function calls */
       if (ic->supportRtn || ic->op == '+' || ic->op == '-')
